--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Dhurjati&family=Montserrat&family=Open+Sans&family=Oswald&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Dhurjati&family=Montserrat&family=Open+Sans&family=Oswald&family=Playfair+Display&display=swap"
+      rel="stylesheet"
+    />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dhurjati&family=Montserrat&family=Open+Sans&family=Oswald&family=Playfair+Display:wght@400;700&display=swap"
       rel="stylesheet"
     />
 
